temporary(?) fix for developer preview 5
Preview 5 of Yosemite appears to have changed the behavior of position:
fixed in WebView instances. At least in the context of Textual, the
WebView is now drawn as a layer backed view even though its never
explicitly defined as one neither is its host window.

As part of this, fonts do not look correct on position: fixed views
such as the topic. This fixes that.

Hopefully next developer preview will revert the layer backing.

--- a/Resources/Styles/Styles/Simplified Dark/design.css
+++ b/Resources/Styles/Styles/Simplified Dark/design.css
@@ -119,6 +119,7 @@ a:hover {
 	text-shadow: 1px 1px rgba(10, 10, 10, 0.7);
 	background: -webkit-linear-gradient(top, #0F0F0F 0%, #262626 100%);
 	-webkit-transition: opacity 0.8s linear;
+	-webkit-font-smoothing: subpixel-antialiased;
 	overflow: hidden;
 	white-space: nowrap;
 	text-overflow: ellipsis;
