--- a/Resources/Styles/Styles/Simplified Light/design.css
+++ b/Resources/Styles/Styles/Simplified Light/design.css
@@ -118,6 +118,7 @@ a:hover {
 	text-shadow: 1px 1px rgba(83, 86, 94, 0.7);
 	background: -webkit-linear-gradient(top, #A2B0D0 0%, #7385AD 100%);
 	-webkit-transition: opacity 0.8s linear;
+	-webkit-font-smoothing: subpixel-antialiased;
 	overflow: hidden;
 	white-space: nowrap;
 	text-overflow: ellipsis;
